added bottom nav bar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.fontFamily": "MonoLisa"
+    "editor.fontFamily": "MonoLisa",
+    "todo-tree.tree.hideIconsWhenGroupedByTag": true
 }
